# batch-processing

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
batch_processing/: constants.py  main.py  utils.py
batch_processing/cmd/batch/: merge.py  split.py
batch_processing/utils/: constants.py  utils.py
cmd/: base.py  elapsed.py  monitor.py
cmd/batch/: merge.py  run.py  split.py
cmd/configure/: init.py  input.py
src/batch_processing/: main.py
src/batch_processing/cmd/: base.py  diff.py  elapsed.py  extract_cell.py  init.py  input.py  map.py  monitor.py  run_check.py  run_status_check.py  slice_input.py
src/batch_processing/cmd/batch/: check.py  legacy_merge.py  legacy_run.py  legacy_split.py  merge.py  new_merge.py  new_run.py  new_split.py  plot.py  postprocess.py  run.py  split.py
src/batch_processing/cmd/configure/: init.py  input.py
src/batch_processing/extra/: cloud_function.py
src/batch_processing/templates/: slice_input_job.sh  slurm_runner.sh  split_job.sh
src/batch_processing/utils/: constants.py  utils.py
templates/: slurm_runner.sh
tests/commands/: test_init.py
