[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-processing"
version = "1.0.0"
authors = [{ name = "Doğukan Teber", email = "dteber@woodwellclimate.org" }]
description = "An internal tool that automates almost everything in the GCP Cluster"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix/macOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/whrc/batch-processing"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
bp = "batch_processing:main.main"

[tool.ruff]
lint.select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade,
    "I",  # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 20
